force-app/main/default/objects/OrderItemProductInfoPipes__c/OrderItemProductInfoPipes__c.object-meta.xml
<CustomObject>
    <label>Order Item: Product Info (Pipes)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items: Product Info (Pipes)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>