force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/BalanceForProduction__c.field-meta.xml
<CustomField>
    <fullName>BalanceForProduction__c</fullName>
    <formula>OrderProduct__r.BalanceForProduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance For Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>