force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/InqQty__c.field-meta.xml
<CustomField>
    <fullName>InqQty__c</fullName>
    <formula>OrderProduct__r.InqQuantuty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inq. Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>