force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/InqUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InqUnitPrice__c</fullName>
    <formula>OrderProduct__r.InqUnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inq. Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>