force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <formula>OrderProduct__r.ITENumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITE Number</label>
    <type>Text</type>
</CustomField>