force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/Mark_1__c.field-meta.xml
<CustomField>
    <fullName>Mark_1__c</fullName>
    <formula>OrderProduct__r.Mark_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark 1</label>
    <type>Text</type>
</CustomField>