force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/MonthlyProdPlan__c.field-meta.xml
<CustomField>
    <fullName>MonthlyProdPlan__c</fullName>
    <formula>OrderProduct__r.MonthlyProdPlan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Prod. Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>