force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <formula>OrderProduct__r.NPS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS</label>
    <type>Text</type>
</CustomField>