force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Order_Items_Product_Info</relationshipName>
    <type>Lookup</type>
</CustomField>