force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/PlanExists__c.field-meta.xml
<CustomField>
    <fullName>PlanExists__c</fullName>
    <formula>OR(
				WeeklyProdPlan__c &gt; 0,
				MonthlyProdPlan__c &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlanExists</label>
    <type>Checkbox</type>
</CustomField>