force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>OrderProduct__r.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>