force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/ProdClassifier__c.field-meta.xml
<CustomField>
    <fullName>ProdClassifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (Classifier)</label>
    <referenceTo>ProductsClassifier__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>