force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/ProdStatus__c.field-meta.xml
<CustomField>
    <fullName>ProdStatus__c</fullName>
    <formula>IF(OrderProduct__r.Is_Placed__c =true, &apos;Placed&apos;, &apos;Expects&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Status</label>
    <type>Text</type>
</CustomField>