force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>