force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>OrderProduct__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>