force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/Qty_ft__c.field-meta.xml
<CustomField>
    <fullName>Qty_ft__c</fullName>
    <formula>OrderProduct__r.Quantity_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty (ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>