force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/Qty_m__c.field-meta.xml
<CustomField>
    <fullName>Qty_m__c</fullName>
    <formula>OrderProduct__r.Quantity_m__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty (m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>