force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/SCH__c.field-meta.xml
<CustomField>
    <fullName>SCH__c</fullName>
    <formula>OrderProduct__r.SCH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SCH</label>
    <type>Text</type>
</CustomField>