force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>