force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard</label>
    <referenceTo>ProductStandard__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>