force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Steel Grade</label>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>