force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/TubeEnds__c.field-meta.xml
<CustomField>
    <fullName>TubeEnds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ends</label>
    <referenceTo>TubeEnds__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>