force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/TubeLengthSize__c.field-meta.xml
<CustomField>
    <fullName>TubeLengthSize__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube Length Size</label>
    <referenceTo>TubeLengthSize__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>