force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/TubeOD__c.field-meta.xml
<CustomField>
    <fullName>TubeOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>