force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/TubeWT__c.field-meta.xml
<CustomField>
    <fullName>TubeWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (Pipes)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_Pipes</relationshipName>
    <type>Lookup</type>
</CustomField>