force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/WeekEndDate__c.field-meta.xml
<CustomField>
    <fullName>WeekEndDate__c</fullName>
    <formula>OrderProduct__r.WeekEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>