force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/WeeklyProdPlan__c.field-meta.xml
<CustomField>
    <fullName>WeeklyProdPlan__c</fullName>
    <formula>OrderProduct__r.WeeklyProdPlan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Prod. Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>