force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/WeekNumber__c.field-meta.xml
<CustomField>
    <fullName>WeekNumber__c</fullName>
    <formula>OrderProduct__r.WeekNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>