force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/WeekStartDate__c.field-meta.xml
<CustomField>
    <fullName>WeekStartDate__c</fullName>
    <formula>OrderProduct__r.WeekStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>