force-app/main/default/objects/OrderItemProductInfoPipes__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <formula>OrderProduct__r.YearMonth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year/Month</label>
    <type>Text</type>
</CustomField>